# hugie

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg
.github/PULL_REQUEST_TEMPLATE/: template.md
.github/workflows/: docs.yml  test.yml
config/: index.html
docs/: config.md  endpoint.md  index.md  installation.md
endpoint/: index.html
examples/: development.json  production.json
hfie/: api.py  cli.py  endpoint.py  settings.py  utils.py
hugie/: __main__.py  cli.py  config.py  endpoint.py  exceptions.py  models.py  models_v2.py
installation/: index.html
search/: search_index.json
tests/: common.py  conftest.py  test_config.py  test_endpoint.py  test_exceptions.py  test_main.py  test_utils.py
tests/data/: incomplete.json
