[metadata]
name = hugie
version = 0.1.0
author = Matthew Upson, Nick Sorros
author_email = hi@mantisnlp.com
description = Package for managing huggingface inference endpoints
long_description = file: README.md
url = https: // www.github.com/MantisAI/hfie
classifiers =
    Programming Language: : Python : : 3
    License: : OSI Approved : : MIT License
    Operating System:: OS Independent

[options]
packages = find:
install_requires =
    typer
    wasabi
    requests
    pydantic
python_requires = >= 3.6


[options.extras_require]
dev =
    pre-commit
    pytest
    mkdocs-material


[options.entry_points]
console_scripts =
    hugie = hugie.cli:app
